[package]
name = "lance-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "32.0.0"
futures = "0.3.26"
futures-core = "0.3.26"
lance = "0.3.2"
rand = "0.8.5"
tokio = { version = "1.25.0", features = ["full"] }
